implemented aggregate and record api
